--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
           crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
   <script src="./index.js"></script>
+  <script src="./converter.js"></script>
   <title>Roman numerals</title>
 </head>
-<body ng-controller="mainController">
 
+<body ng-controller="mainController">
 <div class="jumbotron jumbotron-fluid" ng-cloak>
   <div class="container">
     <h1 class="display-3">Roman numeral converter</h1>
     <p class="lead">Converts a number into a roman numeral</p>
     <form autocomplete="off">
       <div class="form-group">
-        <input ng-model="input" class="form-control" type="text" pattern="^([1-9]|[0-9]{1,3}|[1-3][0-9]{3})$"
+        <input ng-model="input" class="form-control" type="number" pattern="-?[0-9]*(\.[0-9]+)?" min="1" max="3999"
                id="number-input" placeholder="Enter a number...">
       </div>
       <div class="alert alert-danger" ng-if="error">
