--- a/tests.html
+++ b/tests.html
@@ -1,20 +1,19 @@
 </html<!DOCTYPE html>
 <head>
   <title>Mocha Tests</title>
-  <link rel="stylesheet" href="node_modules/mocha/mocha.css">
+  <link href="https://cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.css" rel="stylesheet"/>
+
 </head>
 <body>
 <div id="mocha"></div>
-<script src="node_modules/mocha/mocha.js"></script>
-<script src="node_modules/chai/chai.js"></script>
+
+<script src="https://cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.js"></script>
+<script src="https://cdn.rawgit.com/jquery/jquery/2.1.4/dist/jquery.min.js"></script>
+<script src="https://cdn.rawgit.com/Automattic/expect.js/0.3.1/index.js"></script>
+
 <script>mocha.setup('bdd');</script>
-
-<!-- load code you want to test here -->
-
-<!-- load your test files here -->
-
-<script>
-  mocha.run();
-</script>
+<script src="./converter.js"></script>
+<script src="./test/test.js"></script>
+<script>mocha.run();</script>
 </body>
 </html>
