Adding footer and copyright

--- a/index.html
+++ b/index.html
@@ -37,5 +37,11 @@
     </form>
   </div>
 </div>
+<footer class="footer" ng-cloak>
+  <div class="container">
+    <a href="tests.html">Unit tests</a>
+    <p class="text-muted">© 2017, Gabriel Doucet</p>
+  </div>
+</footer>
 </body>
 </html>
