--- a/tests.html
+++ b/tests.html
@@ -5,6 +5,13 @@
 
 </head>
 <body>
+<header class="header">
+  <div class="container">
+    <p class="text-muted">© 2017, Gabriel Doucet</p>
+    <a href="index.html">Back to index</a>
+  </div>
+</header>
+
 <div id="mocha"></div>
 
 <script src="https://cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.js"></script>
@@ -15,5 +22,6 @@
 <script src="./converter.js"></script>
 <script src="./test/test.js"></script>
 <script>mocha.run();</script>
+
 </body>
 </html>
