Solving a compatibility problem in the input

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p class="lead">Converts a number into a roman numeral</p>
     <form autocomplete="off">
       <div class="form-group">
-        <input ng-model="input" class="form-control" type="number" id="number-input" placeholder="Enter a number...">
+        <input ng-model="input" class="form-control" type="text" id="number-input" placeholder="Enter a number...">
       </div>
       <div class="alert alert-danger" ng-if="error">
         Input must be an integer between 1 and 3999.
